# AgentNebula

./: .gitignore  README.md  pyproject.toml
.entire/metadata/019980c6-7b3b-4f22-8dc1-b5bf26a49ec9/: context.md  prompt.txt  summary.txt
docs/: HANDOFF.md  QUICKSTART.md  TASK_FORMAT.md
docs/templates/: config_template.yaml  spec_template.md  task_list_template.json
examples/.agent-nebula/: README.md  config.yaml  discoveries.md  progress.md  spec.md  task_list_sample.json
examples/titus-script-docs/: HANDOFF.md
examples/titus-script-docs/tools/: README.md  extract_script_usage.py
src/agent_nebula/: __init__.py  __main__.py  cli.py  config.py  dashboard.py  orchestrator.py  state.py  tasks.py
src/agent_nebula/prompts/: __init__.py  initializer.py  worker.py
tools/: extract_script_usage.py  run_workflow.py  setup_workflow.py  stop_workflow.py
